H3CIPMSJAVA-20180830/src/objects/Dispatch__c.object
<CustomObject>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>DATEVALUE(EndDateTime__c)</formula>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>DATEVALUE(StartDateTime__c)</formula>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DispatchToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WO_Status__c</fullName>
        <formula>if (ISPICKVAL( WorkOrder__r.Status , &apos;Closed&apos;)  = true, &apos;Closed&apos;, &apos;Open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Dispatch</relationshipLabel>
        <relationshipName>DispatchToWorkOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dispatch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EndDate__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>StartDate__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>WorkOrder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Dispatch No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>